exports[`data-loader can load multiple dataloaders with different keys 1`] = `
Object {
  "data": Object {
    "result": "Test",
  },
  "isCompleted": true,
  "isError": false,
  "isLoaded": true,
  "isLoading": false,
  "renderCount": 5,
}
`;

exports[`data-loader can load multiple dataloaders with different keys 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": true,
          "data": Object {
            "result": "Test",
          },
          "dataFromServerSideRender": false,
          "failed": false,
          "loading": false,
        },
        "testKey2": Object {
          "completed": false,
          "dataFromServerSideRender": false,
          "failed": false,
          "loading": true,
        },
      },
    },
    "loadingCount": 1,
  },
}
`;

exports[`data-loader can resolve data from multiple components 1`] = `
Object {
  "data": Object {
    "result": "Test",
  },
  "isCompleted": true,
  "isError": false,
  "isLoaded": true,
  "isLoading": false,
  "renderCount": 5,
}
`;

exports[`data-loader can resolve data from multiple components 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": true,
          "data": Object {
            "result": "Test",
          },
          "dataFromServerSideRender": false,
          "failed": false,
          "loading": false,
        },
      },
    },
    "loadingCount": 0,
  },
}
`;

exports[`data-loader ignores completion if unmounted first 1`] = `
Object {
  "dataLoader": Object {
    "data": Object {},
    "loadingCount": 1,
  },
}
`;

exports[`data-loader supports multiple loaders using the same key when data loading 1`] = `
Object {
  "isCompleted": false,
  "isError": false,
  "isLoaded": false,
  "isLoading": true,
  "renderCount": 4,
}
`;

exports[`data-loader supports multiple loaders using the same key when data loading 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": false,
          "dataFromServerSideRender": false,
          "failed": false,
          "loading": true,
        },
      },
    },
    "loadingCount": 1,
  },
}
`;
